# lexbor-android

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts  validate_sources.sh
.github/workflows/: build-release.yml  build-test.yml
cpp/: document.cpp  jni.cpp  node.hpp  selector.cpp  selector.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kotlin/: HtmlDocument.kt  Node.kt  NodeList.kt
src/main/cpp/: document.hpp  jni.cpp  native_handle.hpp  selector.cpp  selector.hpp
src/main/kotlin/io/github/lexbor_jni/: HtmlDocument.kt  Node.kt
test/: test_basic.cpp
